deployments/forgerock-ingress/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http.drop_invalid_header_fields.enabled=true
    alb.ingress.kubernetes.io/scheme: $(loadBalancerScheme)
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/target-type: ip
  name: forgerock-ingress
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - backend:
            service:
              name: ingress-nginx-controller
              port:
                number: 80
          path: /*
          pathType: ImplementationSpecific
